[project]
name = "piston-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yashman-Singh", email = "yashman.p.singh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
]

[project.scripts]
piston-mcp = "piston_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
